force-app/main/default/objects/Service_Case__c/fields/Assign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Assign_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>