force-app/main/default/objects/Service_Case__c/fields/Assign_Type__c.field-meta.xml
<CustomField>
    <fullName>Assign_Type__c</fullName>
    <label>Assign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assign to Worker</fullName>
            </value>
            <value>
                <fullName>Assign to another UNIT</fullName>
            </value>
            <value>
                <fullName>Transfer to Local Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>