force-app/main/default/objects/Service_Case__c/fields/Bundled_Placement_Services__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Placement_Services__c</fullName>
    <label>Bundled Placement Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>