force-app/main/default/objects/Service_Case__c/fields/Child_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Child_Characteristics__c</fullName>
    <label>Child Characteristics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>