force-app/main/default/objects/Service_Case__c/fields/Child_List__c.field-meta.xml
<CustomField>
    <fullName>Child_List__c</fullName>
    <label>Child List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>