force-app/main/default/objects/Service_Case__c/fields/Comments_Close_case__c.field-meta.xml
<CustomField>
    <fullName>Comments_Close_case__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>