force-app/main/default/objects/Service_Case__c/fields/Concurrent_Comments__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>