force-app/main/default/objects/Service_Case__c/fields/Concurrent_Plan_Established_Date__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Plan_Established_Date__c</fullName>
    <label>Plan Established Date</label>
    <type>Date</type>
</CustomField>