force-app/main/default/objects/Service_Case__c/fields/Create_a_Placement_for_the_child__c.field-meta.xml
<CustomField>
    <fullName>Create_a_Placement_for_the_child__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Create a Placement for the child/children</inlineHelpText>
    <label>Create a Placement for the child</label>
    <type>Checkbox</type>
</CustomField>