force-app/main/default/objects/Service_Case__c/fields/Create_Living_Arrangement_for_the_child__c.field-meta.xml
<CustomField>
    <fullName>Create_Living_Arrangement_for_the_child__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Create a Living Arrangement for the child/children</inlineHelpText>
    <label>Create Living Arrangement for the child</label>
    <type>Checkbox</type>
</CustomField>