force-app/main/default/objects/Service_Case__c/fields/Date_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Meeting__c</fullName>
    <inlineHelpText>Start Date</inlineHelpText>
    <label>Date of Meeting</label>
    <type>Date</type>
</CustomField>