force-app/main/default/objects/Service_Case__c/fields/Decision_Select_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Decision_Select_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Supervisor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Casevault Supervisor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Case</relationshipName>
    <type>Lookup</type>
</CustomField>