force-app/main/default/objects/Service_Case__c/fields/Head_of_Household__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Household</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Cases</relationshipLabel>
    <relationshipName>Service_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>