force-app/main/default/objects/Service_Case__c/fields/IsSDMCreated__c.field-meta.xml
<CustomField>
    <fullName>IsSDMCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSDMCreated</label>
    <type>Checkbox</type>
</CustomField>