force-app/main/default/objects/Service_Case__c/fields/Log_Comments__c.field-meta.xml
<CustomField>
    <fullName>Log_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>