force-app/main/default/objects/Service_Case__c/fields/Log_Location__c.field-meta.xml
<CustomField>
    <fullName>Log_Location__c</fullName>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>