force-app/main/default/objects/Service_Case__c/fields/Log_Status__c.field-meta.xml
<CustomField>
    <fullName>Log_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Child Refuse</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>