force-app/main/default/objects/Service_Case__c/fields/Log_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Visit_Date__c</fullName>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>