force-app/main/default/objects/Service_Case__c/fields/Meeting_Decision__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Decision__c</fullName>
    <label>Meeting Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
                <default>true</default>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>