force-app/main/default/objects/Service_Case__c/fields/Name_of_the_Person__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Person__c</fullName>
    <label>Name of the Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>