force-app/main/default/objects/Service_Case__c/fields/Name_of_the_person_completing_report__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_person_completing_report__c</fullName>
    <inlineHelpText>Name of the person completing this report</inlineHelpText>
    <label>Name of the person completing report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facilitator</fullName>
            </value>
            <value>
                <fullName>Case Worker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>