force-app/main/default/objects/Service_Case__c/fields/Number_of_days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days__c</fullName>
    <formula>TODAY() - DATEVALUE (CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>