force-app/main/default/objects/Service_Case__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <label>Participants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>