force-app/main/default/objects/Service_Case__c/fields/Person_Involved__c.field-meta.xml
<CustomField>
    <fullName>Person_Involved__c</fullName>
    <label>Person Involved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>