force-app/main/default/objects/Service_Case__c/fields/Placement_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Placement_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>