force-app/main/default/objects/Service_Case__c/fields/Placement_Local_Department__c.field-meta.xml
<CustomField>
    <fullName>Placement_Local_Department__c</fullName>
    <label>Local Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>