force-app/main/default/objects/Service_Case__c/fields/Placement_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Placement_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>