force-app/main/default/objects/Service_Case__c/fields/Placement_Private__c.field-meta.xml
<CustomField>
    <fullName>Placement_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>