force-app/main/default/objects/Service_Case__c/fields/Placement_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Placement_Provider_ID__c</fullName>
    <label>Provider ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>