force-app/main/default/objects/Service_Case__c/fields/Placement_Public__c.field-meta.xml
<CustomField>
    <fullName>Placement_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>