force-app/main/default/objects/Service_Case__c/fields/Placement_Structure__c.field-meta.xml
<CustomField>
    <fullName>Placement_Structure__c</fullName>
    <label>Placement Structure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intermediate Foster Care</fullName>
            </value>
            <value>
                <fullName>Intermediate Foster Care Difficulty of Care</fullName>
            </value>
            <value>
                <fullName>Pre-Finalized Adoptive Home</fullName>
            </value>
            <value>
                <fullName>Refuse Child</fullName>
            </value>
            <value>
                <fullName>Regular Foster Care</fullName>
            </value>
            <value>
                <fullName>Residential Group Homes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>