force-app/main/default/objects/Service_Case__c/fields/Placement_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Placement_ZipCode__c</fullName>
    <label>ZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>