force-app/main/default/objects/Service_Case__c/fields/Primary_Permanency_Plan__c.field-meta.xml
<CustomField>
    <fullName>Primary_Permanency_Plan__c</fullName>
    <label>Primary Permanency Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>