force-app/main/default/objects/Service_Case__c/fields/Satus__c.field-meta.xml
<CustomField>
    <fullName>Satus__c</fullName>
    <label>Satus</label>
    <length>18</length>
    <type>Text</type>
</CustomField>