force-app/main/default/objects/Service_Case__c/fields/Select_a_Social_Worker__c.field-meta.xml
<CustomField>
    <fullName>Select_a_Social_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select a Social Worker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>