force-app/main/default/objects/Service_Case__c/fields/Select_a_Unit__c.field-meta.xml
<CustomField>
    <fullName>Select_a_Unit__c</fullName>
    <label>Select a Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>