force-app/main/default/objects/Service_Case__c/fields/Select_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Select_Supervisor__c</fullName>
    <label>Select Supervisor</label>
    <length>24</length>
    <type>Text</type>
</CustomField>