force-app/main/default/objects/Service_Case__c/fields/Select_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Select_User_Type__c</fullName>
    <label>Select User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>