force-app/main/default/objects/Service_Case__c/fields/Summary_Completed__c.field-meta.xml
<CustomField>
    <fullName>Summary_Completed__c</fullName>
    <formula>NOT(ISBLANK(Comments__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary Completed</label>
    <type>Checkbox</type>
</CustomField>