force-app/main/default/objects/Service_Case__c/fields/Supervisor_Approver__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Casevault Supervisor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>