force-app/main/default/objects/Service_Case__c/fields/Type_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Meeting__c</fullName>
    <label>Type of Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>