force-app/main/default/objects/Service_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Head_of_Household__c</columns>
    <columns>Number_of_days__c</columns>
    <columns>Status__c</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>