force-app/main/default/objects/Service_Case__c/listViews/Open_and_Close.listView-meta.xml
<ListView>
    <fullName>Open_and_Close</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Number_of_days__c</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open</label>
</ListView>