force-app/main/default/objects/Service_Case__c/listViews/Today_Service_Cases.listView-meta.xml
<ListView>
    <fullName>Today_Service_Cases</fullName>
    <columns>NAME</columns>
    <columns>Head_of_Household__c</columns>
    <columns>Number_of_days__c</columns>
    <columns>Status__c</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Service Cases</label>
</ListView>